--- a/.env
+++ b/.env
@@ -3,6 +3,7 @@ PORT=7777
 DB_URI=mongodb+srv://user:user@cluster0.veqsx.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
 
 CLIENT_HOST=http://localhost:3000
+ADMIN=http://localhost:3001
 
 JWT_SECRET=777999
 
